--- a/stlman/templates/base.html
+++ b/stlman/templates/base.html
@@ -7,7 +7,7 @@
 
 <body>
     <header>
-        <h1>STL Manager Test: {{ page }}</h1> 
+        <h1>STL Manager: {{ page }}</h1> 
         <nav>
             <a href='/index'>Home</a>
             <a href='/longlist'>Long list(default sort)</a>
