removed 'test' from longpage.html

--- a/stlman/templates/longlist.html
+++ b/stlman/templates/longlist.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 {% include '_style.html' %}
-<h1><center>STL Manager Test: {{ page }}</h1></center>
+<h1><center>STL Manager: {{ page }}</h1></center>
 
 <br>
 <br>
